# url-escape

./: Cargo.toml  README.md
.github/workflows/: ci-version.yml  ci.yml
src/: lib.rs
src/decode/: mod.rs
src/encode/: mod.rs
tests/: tests.rs
